--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.h2.console.enabled=true
 
+#------------------------------datasource----------------------------------------
+
+spring.datasource.url = jdbc:mysql://localhost:3306/management
+spring.datasource.username = root
+spring.datasource.password =
+
+#------------------------hibernate-config------------------------------------------
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
 #---------------------------------Queries-------------------------------------
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
