Added Bootstrap file. closes #14

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.datasource.password =
 #------------------------hibernate-config------------------------------------------
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
 
 
 #---------------------------------Queries-------------------------------------
-spring.queries.users-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.users-query=select email, passwd from user where email=?
+spring.queries.roles-query=select u.email, r.role_type from user u inner join role r on(u.role_id = r.role_id) where u.email=?
+spring.queries.roles-query1=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
