--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.h2.console.enabled=true
 
-#------------------------------datasource----------------------------------------
+#------------------------------datasource------------------------------------
 
 spring.datasource.url = jdbc:mysql://localhost:3306/management
 spring.datasource.username = root
 spring.datasource.password =
 
-#------------------------hibernate-config------------------------------------------
+#------------------------hibernate-config-------------------------------------
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
@@ -14,5 +14,8 @@ spring.jpa.show-sql=true
 
 #---------------------------------Queries-------------------------------------
 spring.queries.users-query=select email, passwd from user where email=?
-spring.queries.roles-query=select u.email, r.role_type from user u inner join role r on(u.role_id = r.role_id) where u.email=?
+spring.queries.roles-query=select u.email, r.role_type from user u inner join role r on(u.role_id = r.id) where u.email=?
 spring.queries.roles-query1=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+
+#---------------------------------Debug-------------------------------------
+logging.level.org.springframework.web=DEBUG
