--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.datasource.url = jdbc:mysql://localhost:3306/management
 spring.datasource.username = root
 spring.datasource.password =
 
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+spring.datasource.initialization-mode=always
+
 #------------------------hibernate-config-------------------------------------
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
