--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.thymeleaf.cache=false
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join role r on(u.role_id=r.id) where u.email=?
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
