--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,20 @@ spring.thymeleaf.cache=false
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join role r on(u.role_id=r.id) where u.email=?
 
+# ======================================================
+# = Email(Mail sending) Configuration
+# ======================================================
+#spring.mail.host=webmail.wwindia.com
+#spring.mail.port=465
+#spring.mail.username=rajendra.chavan@neosofttech.com
+#spring.mail.password=rajendrac12
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+
+# =======================================================
+# = DEBUG
+# =======================================================
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
+debug=true
