--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/manage
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password =
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
