--- a/pom.xml
+++ b/pom.xml
@@ -68,14 +68,15 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 
 	<build>
+		<finalName>meeting-room-booking</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -83,5 +84,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
